@@ -89,7 +89,7 @@ if ($SubscriberResult != 0) {
 }
 
 
-$ir = $DCPSREPO->TerminateWaitKill(5);
+$ir = $DCPSREPO->TerminateWaitKill(10);
 
 if ($ir != 0) {
     print STDERR "ERROR: DCPSInfoRepo returned $ir\n";
