@@ -1,3 +1,12 @@
+Fri Apr 21 00:01:11 UTC 2006  Trevor Fields  <fields_t@ociweb.com>
+
+        * performance-tests/DCPS/TCPListenerTest/run_test-1p1s.pl:
+        * performance-tests/DCPS/TCPListenerTest/run_test-1p4s.pl:
+        * performance-tests/DCPS/TCPListenerTest/run_test-2p3s.pl:
+        * performance-tests/DCPS/TCPListenerTest/run_test-4p1s.pl:
+
+          Increased amount of time for the DCPSInfoRepo to shutdown.
+
 Thu Apr 20 13:40:46 USMST 2006  Yan Dai  <dai_y@ociweb.com>
 
         * dds/DCPS/DataWriterImpl.cpp:
